// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render when some of the children are null 1`] = `
<div
  className="sc-bdVaJa cOuxAJ"
>
  <div
    className="sc-bdVaJa jXXnLD"
    fill={undefined}
  >
    <div />
  </div>
  <div
    className="sc-bdVaJa jXXnLD"
    fill={undefined}
  >
    <span />
  </div>
</div>
`;

exports[`should render when some of the children are strings 1`] = `
<div
  className="sc-bdVaJa cOuxAJ"
>
  <div
    className="sc-bdVaJa jXXnLD"
    fill={undefined}
  >
    <div />
  </div>
  <div
    className="sc-bdVaJa jXXnLD"
  >
    I am a string!
  </div>
  <div
    className="sc-bdVaJa jXXnLD"
    fill={undefined}
  >
    <span />
  </div>
</div>
`;
